# plotline

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEVELOPMENT.md  Dockerfile.fly  LICENSE  Makefile  PHASE_3_PROMPT.md  PHASE_4_PROMPT.md  README.md  SUPPORTED_COUNTIES.md  docker-compose.prod.yml  docker-compose.yml  fly.titiler.toml  fly.toml  fly.worker.toml
backend/: .dockerignore  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: alembic.ini  env.py
backend/alembic/versions/: 0001_initial.py  0002_imagery_timeline.py  0003_census_snapshots.py  0004_property_events.py  0005_featured_locations.py  0006_featured_preview_image.py  0007_imagery_additional_cog_urls.py  0008_usgs_topo.py  0009_schema_hardening.py  0010_review_hardening.py
backend/app/: config.py  db.py  logging_config.py  main.py
backend/app/api/: rate_limit.py
backend/app/api/v1/: demographics.py  events.py  featured.py  geocode.py  health.py  imagery.py  parcels.py
backend/app/models/: parcels.py
backend/app/schemas/: demographics.py  featured.py  geocode.py  imagery.py  parcels.py  property_events.py
backend/app/services/: address_normalizer.py  arcgis.py  census.py  ckan.py  county_adapters.py  demographics.py  geocoder.py  imagery.py  parcels.py  preview_renderer.py  property_events.py  socrata.py  stac.py  usgs_topo.py
backend/app/tasks/: celery_app.py  timeline.py
backend/tests/: conftest.py  test_census.py  test_county_adapters.py  test_featured.py  test_geocode.py  test_health.py  test_imagery.py  test_parcels.py  test_property_events.py  test_rate_limit.py  test_stac.py  test_timeline.py
frontend/: .eslintrc.cjs  Dockerfile  Dockerfile.prod  index.html  (+6 more)
(+57 files in other folders)
