[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plotline-api"
version = "0.1.0"
description = "Plotline — Geospatial Time Machine API"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    # Database
    "sqlalchemy>=2.0.30",
    "geoalchemy2>=0.15.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.1",
    # Validation & settings
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
    # Async HTTP
    "httpx>=0.27.0",
    # Geospatial
    "shapely>=2.0.4",
    "pyproj>=3.6.0",
    # Imaging (alpha-composite NAIP tiles into featured previews)
    "pillow>=10.3.0",
    # Async jobs
    "celery[redis]>=5.4.0",
    "redis>=5.0.4",
    # Logging
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",   # for TestClient
    "respx>=0.21.1",   # mock httpx calls
    "ruff>=0.4.4",
    "mypy>=1.10.0",
    "types-redis>=4.6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*"]
